# wanniertools_py

./: BUILD_SUMMARY.md  MANIFEST.in  README.md  check_dll_deps.ps1  debug_dll_conflicts.py  diagnose_dll_issues.bat  inject_mpi_dll.py  log.txt  meson.build  pyproject.toml  test_linux_mpi.sh  wannier_tools-0.0.1-cp39-cp39-macosx_14_0_arm64.whl  windows_setup.bat
.github/workflows/: build_wheels.yml  test_build.yml  windows-dll-debug.yml
Haldane_model/: Berrycurvature-normalized.gnu  Berrycurvature.gnu  POSCAR-mag  POSCAR-origin  POSCAR-rotated  WT.out  bulkek.dat-G-K  bulkek.dat-K'-G  bulkek.dat-M-K'  bulkek.gnu  fort.8  wcc.gnu
build_support/: Dockerfile.manylinux-nompi  Dockerfile.manylinux-openmpi
docs/: DEVELOPER_MANUAL.md  GITHUB_ACTIONS_GUIDE.md
examples/Haldane_model/: Berrycurvature.gnu  Orbitalmagnetization.gnu  POSCAR-SURFACE  POSCAR-slab  WT.out  bulkek.dat-G-K  bulkek.dat-K'-G  bulkek.dat-M-K'  bulkek.dat-matlab  bulkek_plane.gnu  mpi_test_578918.out  run_haldane.py  slabek.gnu  test_mpi_clean.sh
scripts/: start_github_actions.py  test_local_build.py  update_python_versions.py
src/wannier_tools/: __init__.py  __main__.py  check_deps.py  cli.py
src/wannier_tools/_fortran_src/: Makefile  ek_bulk.f90  ek_bulk2D.f90  element_table.f90  f2py_wrapper.f90  ham_bulk.f90  ham_slab.f90  main.f90  module.f90  readHmnR.f90  readinput.f90  runtime_mpi.f90  stop_sub.f90  wanniercenter.f90  wanniercenter_adaptive.f90
src/wannier_tools/internal_mpi/: .placeholder  __init__.py
src/wannier_tools/internal_mpi/linux_x86_64/: README.md
src/wannier_tools/internal_mpi/share/pmix/: pmixcc-wrapper-data.txt
src/wannier_tools/internal_mpi/share/prte/: help-prte-info.txt  help-prte.txt  help-prterun.txt  help-prun.txt  help-pterm.txt
